--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -18,6 +18,12 @@
                     <h1 class="pets-h1">Cozy House</h1>
                     <span class="nav-logo-text nav-logo-text-pets">Shelter for pets in Boston</span>
                 </a>
+                <div class="burger-menu">
+                    <input type="checkbox" id="burger" class="burger-button">
+                    <label for="burger" class="burger-icon">
+                        <img src="assets/svg/Burger-pets.svg" alt="burger-button-img" class="burger-img-main">
+                    </label>
+                </div>
                 <ul class="nav-list">
                     <li class="nav-item"><a href="main.html" class="nav-link nav-link-pets">About the shelter</a></li>
                     <li class="nav-item"><a href="#our-pets" class="nav-link nav-link-pets pointed pointed-dark">Our
@@ -114,17 +120,18 @@
             <div class="footer-visit">
                 <h3 class="white-text">We are waiting for your visit</h3>
                 <div class="contacts">
-                    <img src="assets/svg/icon-marker.svg" alt="adress">
-                    <h4 class="orange-text"><a class="footer-link" href="https://maps.app.goo.gl/KwkVaFQPnAWrDtRL9"
-                            target="_blank">18 South Park, London</a></h4>
-                </div>
-                <div class="contacts">
-                    <img src="assets/svg/icon-marker.svg" alt="adress">
-                    <h4 class="orange-text"><a class="footer-link" href="https://maps.app.goo.gl/KwkVaFQPnAWrDtRL9"
+                    <img src="assets/svg/icon-marker.svg" alt="adress" class="adress-img">
+                    <h4 class="orange-text"><a href="https://maps.app.goo.gl/KwkVaFQPnAWrDtRL9" class="footer-link"
                             target="_blank">1 Central Street, Boston (entrance from the store)</a></h4>
+                </div>
+                <div class="contacts contacts-last">
+                    <img src="assets/svg/icon-marker.svg" alt="adress" class="adress-img">
+                    <h4 class="orange-text"><a href="https://maps.app.goo.gl/KwkVaFQPnAWrDtRL9" class="footer-link"
+                            target="_blank">18 South Park, London</a></h4>
                 </div>
             </div>
             <div class="footer-img"></div>
+            <div class="footer-img-mobile"></div>
         </div>
     </footer>
     <script src="script.js"></script>
