--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -18,13 +18,14 @@
                     <h1 class="pets-h1">Cozy House</h1>
                     <span class="nav-logo-text nav-logo-text-pets">Shelter for pets in Boston</span>
                 </a>
-                <div class="burger-menu">
-                    <input type="checkbox" id="burger" class="burger-button">
-                    <label for="burger" class="burger-icon">
-                        <img src="assets/svg/Burger-pets.svg" alt="burger-button-img" class="burger-img-main">
-                    </label>
+                <div>
+                    <div class="burger-menu">
+                        <div class="line"></div>
+                        <div class="line"></div>
+                        <div class="line"></div>
+                    </div>
                 </div>
-                <ul class="nav-list">
+                <ul class="nav-list nav-list-pets nav-list-transformed">
                     <li class="nav-item"><a href="main.html" class="nav-link nav-link-pets">About the shelter</a></li>
                     <li class="nav-item"><a href="#our-pets" class="nav-link nav-link-pets pointed pointed-dark">Our
                             pets</a></li>
@@ -36,7 +37,39 @@
         </div>
     </header>
     <main class="main main-pets">
-        <div class="container">
+        <div class="overlay hidden"></div>
+        <div class="popup-container">
+            <div class="slider-button close-button">
+                <img src="assets/svg/close-button.svg" alt="close-button">
+            </div>
+            <div class="popup">
+                <div class="pet-img-popup">
+                    <img src="assets/img/pets-jennifer.png" alt="">
+                </div>
+                <div class="popup-content">
+                    <h3 class="pet-name">Jennifer</h3>
+                    <h4><span class="pet-type">Dog</span> - <span class="pet-breed">Labrador</span></h4>
+                    <h5 class="pet-description">Jennifer is a sweet 2 months old Labrador that is patiently waiting to
+                        find a new forever home. This girl really enjoys being able to go outside to run and play, but
+                        won't hesitate to play up a storm in the house if she has all of her favorite toys.</h5>
+                    <ul>
+                        <li>
+                            <strong>Age:</strong> <span class="pet-age">2 months</span>
+                        </li>
+                        <li>
+                            <strong>Inoculations:</strong> <span class="pet-inoculations">none</span>
+                        </li>
+                        <li>
+                            <strong>Diseases:</strong> <span class="pet-diseases">none</span>
+                        </li>
+                        <li>
+                            <strong>Parasites:</strong> <span class="pet-parasites">none</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="container pets-container">
             <section class="all-cards">
                 <h3 class="h3-center">Our friends who <span class="break-line">are looking for a house</span></h3>
                 <div class="gallery">
@@ -47,7 +80,7 @@
                             <button class="button white-button"><span class="white-button-text">Learn
                                     more</span></button>
                         </div>
-                        <div class="cart">
+                        <div class="cart jennifer">
                             <div class="cart-img"><img src="assets/img/pets-jennifer.png" alt="Jennifer"></div>
                             <h4>Jennifer</h4>
                             <button class="button white-button"><span class="white-button-text">Learn
@@ -134,7 +167,7 @@
             <div class="footer-img-mobile"></div>
         </div>
     </footer>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 
 </html>
