feat: add functionality

--- a/image-gallery/index.html
+++ b/image-gallery/index.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movie app</title>
+    <title>Image gallery</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+<div class="header__text">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 18"><path style="fill:  hsl(30, 100%, 50%); stroke: hsl(30, 100%, 50%)" d="M3.5 6.5 L6.5 6.5 6.5 6 A1.5 1.5 0 0 1 8 4.5 L10 4.5 A1.5 1.5 0 0 1 11.5 6 L11.5 6.5 14.5 6.5 14.5 13.5 3.5 13.5 Z" /><path d="M12 8 L13 8 13 9 12 9 Z" style="fill: black" /><circle cx="9" cy="10" r="1.5" style="fill:  hsl(30, 100%, 50%); stroke: black" /></svg>
+        <h1>Unsplash API</h1>
+    </div>
+    <form id="form" class="search-box">
+        <input type="text" autofocus autocomplete="off" placeholder="Search" class="search-input" id="search">
+        <img src="assets/search-svgrepo-com.svg"  class="img__search" alt="">
+        <img src="assets/close-x-svgrepo-com.svg" class="close-img" alt="close-img">
+    </form>
+    </header>
+<main>
+    <div class="container">
+    </div>
+</main>
+<footer>
+    <div class="logo-section">
+        2024 <a href="https://rs.school/courses/javascript-preschool-ru"><img src="assets/rss-logo.svg" alt="RS school"></a> <a href="https://github.com/alitha1576"><img src="assets/github_logo.png" alt="GitHub"></a>
+    </div>
+</footer>
+    <script src="script.js"></script>
 </body>
 </html>
+
