feat: add footer and block for results

--- a/randome-game/index.html
+++ b/randome-game/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <canvas id="canvas" width="800" height="450" style="border:1px solid black"></canvas>
+    <footer>
+        <div class="logo-section">
+            2024 <a href="https://rs.school/courses/javascript-preschool-ru"><img src="assets/rss-logo.svg" alt="RS school"></a> <a href="https://github.com/alitha1576"><img src="assets/github_logo.png" alt="GitHub"></a>
+        </div>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
